ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-05-19 Benedikt Heintel
	- GUI:
		* Fixed #1263: Error 404 when deleting user from "reseller" interface
	- TOOLS:
		* Fixed #1264: (Webmail) Error: File does not exist
		* Fixed #1265: (Filemanager) Fatal error in filemanager

2008-05-17 Benedikt Heintel
	- DISTROS:
		* Fixed #1262: Opensuse: Cron job for awstats static

2008-05-16 Benedikt Heintel
	- CONFIGS:
		* Fixed #1250: Please harden the php open_basedir pathes in the apache config files.
	- ENGINE:
		* Fixed #1260: Syntaxerror in ispcp-als-mngr
	- GUI:
		* Fixed #1144: Show all support tickets to adminShow all support tickets to admin
		* Fixed #1226: Logging Deamon (Mail)
		* Fixed #1258: possible XSS - Cross Site Scripting in some GUI-files
		* Fixed #1259: tiny typos in php comments
	- TOOLS:
		* Fixed #923: Open basedir errors with filemanager. Anyone else has the same error?

2008-05-15 Benedikt Heintel
	- CONFIGS:
		* Fixed #1250: Please harden the php open_basedir pathes in the apache config files.
	- ENGINE:
		* Fixed #1249: ispcp-dmn-mngr beautifying patch

2008-05-15 Jochen Manz
	- GUI:
		* Fixed #1255: please commit these patches for an better useful/readable database update files
		* Fixed #1256: admin's database update does not stop if there is an update failure

2008-05-15 Marc Pujol
	- GUI
		* Fixed #1254: Admin level hosting plans are not working

2008-05-13 Benedikt Heintel
	- ENGINE:
		* Fixed #1249: ispcp-dmn-mngr beautifying patch
	- LANGUAGES:
		* Updated Catalan

2008-05-12 Benedikt Heintel
	- ENGINE:
		* Fixed #1244: Use of uninitialized value in concatenation - in file engine/ispcp-htuser-mngr
	- GUI:
		* Fixed #1209: Undefined index: mail_type_forward
		* Fixed #1243: adding mail aborts
	- LANGUAGES:
		* Updated German

2008-05-12 Thomas Wacker
	- GUI:
		* Fixed #1207: new order mail to reseller
		* Fixed #1208: mailer from reseller not working
		* Fixed #1209: Undefined index: mail_type_forward