@@ -145,7 +145,7 @@ SQL_QUERY;
 	} // end of else
 }
 
-function gen_page_awstats($tpl) {
+function gen_page_awstats(&$tpl) {
 	global $cfg;
 	$awstats_act = $cfg['AWSTATS_ACTIVE'];
 	if ($awstats_act != 'yes') {
