@@ -39,7 +39,7 @@ $tpl->assign(
 		)
 	);
 
-function gen_page_awstats($tpl) {
+function gen_page_awstats(&$tpl) {
 	global $cfg;
 	$awstats_act = $cfg['AWSTATS_ACTIVE'];
 	if ($awstats_act != 'yes') {
